fix: don't wrap text in primary button

--- a/frappe/public/scss/global.scss
+++ b/frappe/public/scss/global.scss
@@ -169,6 +169,7 @@ button.btn.dropdown-toggle:after {
 
 .btn.btn-primary {
 	background-color: $primary;
+	white-space: nowrap;
 }
 
 .btn.btn-danger {
